<resources>
    <string name="app_name">lnch</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="save">Save</string>
    <string name="preview">Preview</string>
    <string name="notification_service_name">Notification dots</string>
    <string name="screen_lock_accessibility_title">Double tap to lock (LNCH)</string>
    <string name="screen_lock_accessibility_description">Locks the screen only when you enable Double tap to lock in lnch and double tap empty space on its apps or widgets page. This service does not read screen content or collect or share personal data. You can disable it here at any time.</string>
    <string name="screen_lock_failed">Could not lock the screen. Try again.</string>
    <string name="widgets_gallery_title">Widget Gallery</string>
    <string name="widgets_gallery_hint_search">App or widget name</string>
    <string name="widgets_gallery_search_empty">Nothing found</string>
    <string name="widgets_popup_settings">Widgets settings</string>
    <string name="hint_search">Search</string>
    <string name="hint_search_open_web">Go to</string>
    <string name="hint_search_preference">Search preferences…</string>
    <string name="new_folder_default_label">New Folder</string>
    <string name="pinned_shortcut_default_label">New Shortcut</string>
    <string name="search_placeholder">No apps matching \"%1$s\" found</string>
    <string name="search_empty">No apps</string>
    <string name="color_picker_edit_value_title">Enter value</string>
    <string name="color_picker_edit_value_hint">Value from %1$d to %2$d</string>
    <string name="deep_shortcut_pinned">\"%1$s\" pinned</string>
    <string name="deep_shortcut_already_pinned">\"%1$s\" already pinned</string>
    <string name="pin_item_title">Pin to home screen</string>
    <string name="apps_list_empty">No apps</string>
    <string name="dialog_delete_title">Delete item</string>
    <string name="dialog_delete_message">Delete \"%1$s\"?\nThis operation cannot be undone</string>
    <string name="dialog_delete_action">Delete</string>
    <string name="popup_notifications_header">Notifications</string>
    <string name="shortcut_set_default_launcher_hint">Set home app</string>
    <string name="customize_hint">Customize</string>
    <string name="customize_saved">Saved</string>
    <string name="customize_discard_message">Discard changes?</string>
    <string name="customize_discard">Discard</string>
    <string name="customize_item_rename">Rename</string>
    <string name="customize_item_change_color">Change color</string>
    <string name="customize_item_change_appearance">Appearance</string>
    <string name="customize_item_add_to_folder">Add to folder</string>
    <string name="customize_item_move_to_folder">Move to folder</string>
    <string name="customize_item_edit_intent">Edit Intent</string>
    <string name="customize_item_delete">Delete</string>
    <string name="customize_item_remove_from_folder">Remove from folder</string>
    <string name="customize_item_move_to_desktop">Move to desktop</string>
    <string name="customize_item_edit_folder">Edit folder</string>
    <string name="customize_item_new_folder">Create new folder</string>
    <string name="customize_action_reset">Reset</string>
    <string name="customize_wallpaper_dim">Dim wallpaper</string>
    <string name="customize_text_size">Text size</string>
    <string name="customize_text_padding">Text padding</string>
    <string name="customize_item_width">Item width</string>
    <string name="customize_item_alignment">Alignment</string>
    <string name="folder_empty">Folder is empty</string>
    <string name="folder_new_title">Folder name</string>
    <string name="popup_app_info">App info</string>
    <string name="popup_app_uninstall">Uninstall</string>
    <string name="popup_empty">No actions available</string>
    <string name="edit_divider_label">Divider</string>
    <string name="edit_add_divider">Add divider</string>
    <string name="edit_add_folder">Add Folder</string>
    <string name="edit_add_intent">Custom Intent</string>
    <string name="intent_factory_title">Intent editor</string>
    <string name="intent_factory_extras">Intent extras</string>
    <string name="intent_factory_extras_format">%1$d extras</string>
    <string name="intent_factory_commit">Commit changes</string>
    <string name="intent_factory_test">Test Intent</string>
    <string name="intent_factory_clear">Clear</string>
    <string name="intent_factory_default_title">New Intent</string>
    <string name="intent_factory_intent_properties">Properties</string>
    <string name="intent_factory_intent_component">Component</string>
    <string name="intent_factory_intent_extras">Extras</string>
    <string name="intent_factory_intent_action">Action</string>
    <string name="intent_factory_intent_hint_empty">&lt;empty&gt;</string>
    <string name="intent_factory_intent_package">Package name</string>
    <string name="intent_factory_intent_class">Class name</string>
    <string name="intent_factory_intent_data">Data</string>
    <string name="intent_factory_intent_type">Type</string>
    <string name="intent_factory_intent_category">Category</string>
    <string name="intent_factory_intent_flags">Flags</string>
    <string name="intent_factory_intent_error_test">Could not launch Intent</string>
    <string name="intent_factory_intent_error_action">"Either action or package name must be set"</string>
    <string name="intent_factory_extras_menu_add">Add extra</string>
    <string name="intent_factory_extras_menu_save">Save</string>
    <string name="intent_factory_extras_empty">No Intent extras added</string>
    <string name="intent_factory_extras_dialog_title">Add extra</string>
    <string name="intent_factory_extras_dialog_add">Add</string>
    <string name="intent_factory_extras_error_key">Key must not be empty</string>
    <string name="intent_factory_extras_error_value">Cannot add extra:\n%1$s</string>
    <string name="intent_factory_extras_key">Key</string>
    <string name="intent_factory_extras_value">Value</string>
    <string name="intent_component_selector_title">Select component</string>
    <string name="intent_component_selector_empty">No components found</string>
    <string name="settings_title">Settings</string>
    <string name="settings_system">System settings</string>
    <string name="settings_version">Version %1$s</string>
    <string name="settings_source_code">Source code</string>
    <string name="settings_customize">Customize</string>
    <string name="settings_set_default_launcher">Set lnch as home app</string>
    <string name="settings_category_home">Home</string>
    <string name="settings_home_wallpaper">Wallpaper</string>
    <string name="settings_home_wallpaper_change">Change wallpaper</string>
    <string name="settings_home_wallpaper_dim_color">Wallpaper dimming color</string>
    <string name="settings_home_screen_lock_double_tap">Double tap to lock</string>
    <string name="settings_home_screen_lock">Screen lock</string>
    <string name="settings_home_screen_lock_consent_title">Enable double tap to lock?</string>
    <string name="settings_home_screen_lock_consent_accept">Agree and continue</string>
    <string name="settings_home_screen_lock_consent_decline">Not now</string>
    <string name="settings_home_screen_lock_double_tap_summary">Lock the screen by double tapping empty space on the apps or widgets page</string>
    <string name="settings_home_screen_lock_access_required">Accessibility access is required. Open Screen lock accessibility access below to finish setup.</string>
    <string name="settings_home_misc_shortcuts_max_dynamic">Maximum dynamic shortcuts</string>
    <string name="settings_home_misc_shortcuts_sort_mode">Sorting</string>
    <string name="settings_home_misc_shortcuts_show">Show shortcuts</string>
    <string name="settings_home_misc_shortcuts_show_summary_on">Shortcuts will be shown in popups</string>
    <string name="settings_home_misc_shortcuts_show_summary_off">Shortcuts will not be shown in popups. Shortcuts will still be visible in search</string>
    <string name="settings_home_misc_notifications_dot">Notification dots</string>
    <string name="settings_home_misc_notifications_dot_summary">Show a badge on apps which have active notifications</string>
    <string name="settings_home_misc_notifications_dot_ongoing">Show for ongoing notifications</string>
    <string name="settings_home_misc_notifications_dot_folders">Show dots on folders</string>
    <string name="settings_home_misc_notifications_popup">Notifications popup</string>
    <string name="settings_home_misc_notifications_popup_show">Show notifications in popup</string>
    <string name="settings_home_widgets_enable">Enable widgets</string>
    <string name="settings_home_widgets_enable_summary">Add a page with widgets on home screen</string>
    <string name="settings_home_widgets_force_resize">Force resize</string>
    <string name="settings_home_widgets_force_resize_summary">Allow changing size of the widgets even when they do not support it</string>
    <string name="settings_home_widgets_position">Widgets page position</string>
    <string name="settings_home_widgets_remove">Remove widgets</string>
    <string name="settings_home_widgets_remove_summary">Remove all currently pinned widgets</string>
    <string name="settings_home_widgets_grid_size">Number of grid cells</string>
    <string name="settings_search_auto_show">Automatically show keyboard</string>
    <string name="settings_search_auto_show_summary_on">Keyboard will open when search bar appears</string>
    <string name="settings_search_auto_show_summary_off">Keyboard will NOT open when search bar appears</string>
    <string name="settings_search_custom_tabs">Use custom tabs</string>
    <string name="settings_excluded_search_targets">Hide from search results</string>
    <string name="settings_excluded_search_targets_summary">What to hide from search results</string>
    <string name="settings_search_custom_tabs_summary">Web search and links will open inside the launcher</string>
    <string name="settings_search_global">Show global search button</string>
    <string name="settings_search_customize">Show Customize button</string>
    <string name="settings_search_customize_summary">Customization can be also started by long-pressing Settings button</string>
    <string name="settings_search_history">Search history</string>
    <string name="settings_search_bar">Search bar</string>
    <string name="settings_search_history_most_used">Show most used apps</string>
    <string name="settings_search_history_most_used_summary">Display most used apps when search opens</string>
    <string name="settings_search_history_most_used_reset">Reset usage statistics</string>
    <string name="settings_search_engine">Search engine</string>
    <string name="settings_home_laf_appearance_text_size">Text size</string>
    <string name="settings_home_laf_appearance_text_font">Font</string>
    <string name="settings_home_laf_appearance_shadow_radius">Shadow radius</string>
    <string name="settings_home_laf_appearance_shadow_color">Shadow color</string>
    <string name="settings_home_laf_appearance_padding">Padding</string>
    <string name="item_appearance_width">Width</string>
    <string name="item_appearance_text_align">Text alignment</string>
    <string name="item_appearance_default">Default</string>
    <string name="item_appearance_content">Content</string>
    <string name="item_appearance_fill_row">Fill row</string>
    <string name="item_appearance_fill_row_content_width">Row</string>
    <string name="item_appearance_start">Start</string>
    <string name="item_appearance_center">Center</string>
    <string name="item_appearance_end">End</string>
</resources>