<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="enable_widgets"
        android:summary="@string/settings_home_widgets_enable_summary"
        android:title="@string/settings_home_widgets_enable" />
    <ListPreference
        android:defaultValue="left"
        android:dependency="enable_widgets"
        android:entries="@array/pref_desc_home_widgets_position"
        android:entryValues="@array/pref_values_home_widgets_position"
        android:key="widgets_position"
        android:summary="%s"
        android:title="@string/settings_home_widgets_position" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:dependency="enable_widgets"
        android:key="widgets_force_resize"
        android:summary="@string/settings_home_widgets_force_resize_summary"
        android:title="@string/settings_home_widgets_force_resize" />
    <SeekBarPreference
        android:defaultValue="5"
        android:dependency="enable_widgets"
        android:key="widgets_horizontal_grid_size"
        android:summary="@string/settings_home_widgets_grid_size_summary"
        android:title="@string/settings_home_widgets_grid_size"
        app:showSeekBarValue="true" />
    <Preference
        android:dependency="enable_widgets"
        android:key="@string/pref_key_widgets_remove"
        android:summary="@string/settings_home_widgets_remove_summary"
        android:title="@string/settings_home_widgets_remove" />
</PreferenceScreen>
