<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="320dp"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/item_appearance_width"
        android:text="@string/item_appearance_width"
        android:textAppearance="?textAppearanceTitleSmall" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@id/item_appearance_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:checkedButton="@+id/item_width_default"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_width_default"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/item_appearance_default"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_width_content"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/item_appearance_content"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_width_fill_content"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/item_appearance_fill_row_content_width"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_width_fill"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/item_appearance_fill_row"
            android:textSize="12sp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/item_appearance_align"
        android:text="@string/item_appearance_text_align"
        android:textAppearance="?textAppearanceTitleSmall" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@id/item_appearance_align"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:checkedButton="@+id/item_align_default"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_align_default"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/item_appearance_default"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_align_start"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/item_appearance_start"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_align_center"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/item_appearance_center"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_align_end"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:text="@string/item_appearance_end"
            android:textSize="12sp" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
</LinearLayout>
