<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/wallpaper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appearance_overlay_container_height"
        android:layout_above="@+id/prefs_container"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/cd_wallpaper"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/backgrounds/scenic" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/appearance_overlay_container_height"
        android:layout_above="@+id/prefs_container"
        android:layout_alignParentTop="true">

        <View
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="#8000" />

        <include
            android:id="@+id/item_preview"
            layout="@layout/item_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <ImageView
            android:id="@+id/preview_background_switcher"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/selector_appearance_switcher"
            android:padding="4dp"
            android:src="@drawable/ic_settings_wallpaper" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/prefs_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?colorSurface"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.italankin.lnch.util.widget.pref.SliderPrefView
                android:id="@+id/item_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:spv_icon="@drawable/ic_settings_size"
                app:spv_title="@string/settings_home_laf_appearance_text_size" />

            <com.italankin.lnch.util.widget.pref.ValuePrefView
                android:id="@+id/item_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tpv_icon="@drawable/ic_settings_font"
                app:tpv_title="@string/settings_home_laf_appearance_text_font" />

            <com.italankin.lnch.util.widget.pref.SliderPrefView
                android:id="@+id/item_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:spv_icon="@drawable/ic_settings_padding"
                app:spv_title="@string/settings_home_laf_appearance_padding" />

            <com.italankin.lnch.util.widget.pref.SliderPrefView
                android:id="@+id/item_shadow_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:spv_icon="@drawable/ic_settings_shadow_radius"
                app:spv_title="@string/settings_home_laf_appearance_shadow_radius" />

            <com.italankin.lnch.util.widget.pref.ValuePrefView
                android:id="@+id/item_shadow_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tpv_icon="@drawable/ic_settings_shadow_color"
                app:tpv_title="@string/settings_home_laf_appearance_shadow_color" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
